# fenrir-infra

./: .gitignore  README.md  README.me  commit_message  portmaps.yml  setup.sh
airflow/: airflow-stack.yml  local-airflow-stack.yml  local-executor-airflow-stack.yml  run.sh
analytics/: metabase-stack.yml
confluent-kafka-yaml/: Pipfile  README.md  pyproject.toml  requirements.txt
confluent-kafka-yaml/app/: config.yml  main.py
confluent-kafka-yaml/app/src/services/: client_pool.py  producer_context.py
devbox/: Dockerfile  devbox-ssh.sh  devbox-stack.yml
devops/: export_vars.sh  portmaps.yml  setup.sh
flink/: flink-stack.yml
kafka/: kafka-stack.yml
kstream/: Pipfile
kstream/app/: config.yml
kstream/app/src/config/: app_config.py  structlog_config.py
kstream/app/src/services/: channel_config.py  client_pool.py  consumer_context.py  kafka_config_example.yml  producer_context.py  registry_context.py  topic_context.py
kstream/app/src/utils/: metainfo.py
portainer/: portainer-stack.yml
postgres/: postgres-stack.yml
postgres+metabase/: postgres-metabase-stack.yml
spark/: spark-stack.yml
tailscale/: tailscale-stack.yml
